# trAAcker

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  advancements.json  config.json  log-single-save-1  main.cpp  notes.md  tad.cpp  thief.py  todo.md
include/: .advancements.hpp  ApplicationInfo.hpp  advancements.hpp  app_finder.cpp  app_finder.hpp  compat.cpp  compat.hpp  dmon.cpp  dmon.hpp  logging.cpp  logging.hpp  utilities.hpp
include/osx/: Focus.h  Focus2Wrapper.mm  FocusWrapper.mm  Focused2ApplicationFinder.hpp  FocusedApplicationFinder.hpp
logs/: log-single-save-2-full-dump
src/: Advancements.cpp  Advancements.hpp  Application.cpp  Application.hpp  ConfigProvider.hpp  Event.hpp  FileProvider.cpp  FileProvider.hpp  Map.cpp  Map.hpp  Overlay.cpp  Overlay.hpp  ResourceManager.cpp  ResourceManager.hpp  RingBuffer.hpp  Tile.hpp  TurnTable.hpp  WindowManager.cpp  WindowManager.hpp
testing/: all-everything.json  less.json  most-complete.json
testing/world1/advancements/: no-recipes.json
testing/world2/advancements/: all-everything.json
